# sgp-plus

./: .gitignore  EVIDENCIAS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/sgp_plus/: __init__.py  main.py
apps/api/src/sgp_plus/core/: config.py  rbac.py  security.py  session_utils.py
apps/api/src/sgp_plus/db/: base.py  seed.py  session.py
apps/api/src/sgp_plus/db/models/: __init__.py  associations.py  permission.py  role.py  session.py  user.py
apps/api/src/sgp_plus/features/auth/: repository.py  router.py  schemas.py  service.py
apps/api/src/sgp_plus/shared/: errors.py  utils.py
apps/api/src/sgp_plus/tests/: conftest.py  test_auth.py  test_config.py  test_health.py  test_rbac.py  test_security_password_policy.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: config.json  manifest.webmanifest
apps/web/public/icons/: .gitkeep
apps/web/src/: main.tsx
apps/web/src/app/guards/: RequirePermission.tsx
apps/web/src/app/routes/: App.tsx
apps/web/src/core/auth/: AuthContext.tsx  authApi.ts
apps/web/src/core/config/: loadConfig.ts
apps/web/src/core/http/: client.ts
apps/web/src/features/auth/: LoginPage.css  LoginPage.tsx
apps/web/src/features/home/: HomePage.css  HomePage.tsx
docs/: DEV.md  architecture.md  environments.md
docs/ADR/: 0001_auth_cookie_httpOnly_csrf.md  README.md
infra/docker/: docker-compose.yml
scripts/: dev.ps1  dev.sh
(+2 files in other folders)
